--- a/hits.html
+++ b/hits.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
@@ -16,13 +15,7 @@
         </nav>
     </header>
     <main class="main">
-        <article>
-            <h1>*Site Title Here*</h1>
-            <p>Finds today's hits and your favorite artists' catalog, all in one place!</p>
-            <button class="button">Top Hits</button>
-            <button class="button">Discography Search</button>
-            <!--add whatever else to the homepage! maybe a lyric generator like your friend's movie quote generator-->
-        </article>
+        <!--we can use this page to post today's hits and then maybe have a section for all time hits and the hits from a decade or two-->
     </main>
     <footer class="footer">&copy 2023 Rogers, Pope</footer>
     <script src="index.js"></script>
