renamed discography page to artist, created artist html

--- a/artist.html
+++ b/artist.html
@@ -11,13 +11,22 @@
         <nav class="header__nav layout">
             <a class="header__link" href="index.html">Home</a>
             <a class="header__link" href="hits.html">Top Hits</a>
-            <a class="header__link" href="discography.html">Discography Search</a>
+            <a class="header__link" href="artist.html">Artist Search</a>
         </nav>
     </header>
     <main class="main">
-        <!--we can use this page for people to search for their favorite artist and have the API return that artist's discography-->
+        <section>
+            <h1>"Music is how we decorate time."</h1>
+            <p>
+                Search for your favorite artist!
+                <p>
+            <form>
+                <input name="search" id="artist-search" type="text" placeholder="Enter Artist Name">
+                <button type="submit" class="button">Search</button>
+            </form>
+        </section>
     </main>
     <footer class="footer">&copy 2023 Rogers, Pope</footer>
-    <script src="index.js"></script>
+    <script src="artist.js"></script>
 </body>
 </html>
