--- a/hits.html
+++ b/hits.html
@@ -11,7 +11,7 @@
         <nav class="header__nav layout">
             <a class="header__link" href="index.html">Home</a>
             <a class="header__link" href="hits.html">Top Hits</a>
-            <a class="header__link" href="discography.html">Discography Search</a>
+            <a class="header__link" href="artist.html">Artist Search</a>
         </nav>
     </header>
     <main class="main">
