--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <nav class="header__nav layout">
             <a class="header__link" href="index.html">Home</a>
             <a class="header__link" href="hits.html">Top Hits</a>
-            <a class="header__link" href="discography.html">Discography Search</a>
+            <a class="header__link" href="artist.html">Artist Search</a>
         </nav>
     </header>
     <main class="main">
         <article>
-            <h1>*Site Title Here*</h1>
-            <p>Finds today's hits and your favorite artists' catalog, all in one place!</p>
+            <h1>Let's Groove!</h1>
+            <p>Find today's hits and your favorite artists' catalog, all in one place!</p>
             <button class="button">Top Hits</button>
-            <button class="button">Discography Search</button>
+            <button class="button">Artist Search</button>
             <!--add whatever else to the homepage! maybe a lyric generator like your friend's movie quote generator-->
         </article>
     </main>
