reworked for new theme, created js form:

--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
     <header class="header">
         <nav class="header__nav layout">
             <a class="header__link" href="index.html">Home</a>
-            <a class="header__link" href="hits.html">Top Hits</a>
-            <a class="header__link" href="artist.html">Artist Search</a>
+            <a class="header__link" href="dogs.html">Dogs</a>
+            <a class="header__link" href="cats.html">Cats</a>
+            <a class="header__link" href="search.html">Animal Search</a>
         </nav>
     </header>
     <main class="main">
         <article>
-            <h1>Let's Groove!</h1>
-            <p>Find today's hits and your favorite artists' catalog, all in one place!</p>
-            <button class="button">Top Hits</button>
-            <button class="button">Artist Search</button>
-            <!--add whatever else to the homepage! maybe a lyric generator like your friend's movie quote generator-->
+            <h1>*New title??*</h1>
+            <p>Are you a dog person or a cat person?</p>
+            <button class="button">Dog</button>
+            <button class="button">Cat</button>
+            <button class="button">Neither</button> <!--onclick takes you to animal search page-->
         </article>
     </main>
     <footer class="footer">&copy 2023 Rogers, Pope</footer>
