--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     </header>
     <main class="main">
         <article>
-            <h1>*New title??*</h1>
+            <h1>Welcome to our animal database!</h1>
+            <h2>Our site functions as a hub for dog and cat photos, as well as a general</h2>
             <p>Are you a dog person or a cat person?</p>
             <button class="button">Dog</button>
             <button class="button">Cat</button>
