--- a/search.html
+++ b/search.html
@@ -16,9 +16,9 @@
         </nav>
     </header>
     <main class="main">
-        <h1>Seach for you favorite animal here!</h1>
+        <h1>Search for your favorite animal here!</h1>
         <form>
-            <input name="search" id="animal-search" type="text" placeholder="Search animal" />
+            <input name="search" id="animal-search" type="text" placeholder="Enter Animal Name..." />
             <button type="submit" class="button">Search</button>
         </form>
         <section id="animals"></section>
