--- a/cats.html
+++ b/cats.html
@@ -17,6 +17,7 @@
         }
     </style>
 </head>
+<body class="body cat-page">
 <body class="body">
     <header class="header">
         <nav class="header__nav layout">
@@ -42,5 +43,6 @@
     </main>
     <footer class="footer">&copy 2023 Rogers, Pope</footer>
     <script src="cats.js"></script>
+</body>
 </body>
 </html>
