--- a/dogs.html
+++ b/dogs.html
@@ -7,7 +7,7 @@
     <title>Random Dog Generator</title>
     <style>
         #dogImage {
-            max-width: 100%;
+            max-width: 80%;
             height: auto;
         }
         button {
@@ -17,6 +17,7 @@
         }
     </style>
 </head>
+<body class="body dog-page">
 <body class="body">
     <header class="header">
         <nav class="header__nav layout">
@@ -36,5 +37,6 @@
     </main>
     <footer class="footer">&copy 2023 Rogers, Pope</footer>
     <script src="dogs.js"></script>
+</body>
 </body>
 </html>
