--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <main class="main">
         <article>
-            <h1>Welcome to our animal database!</h1>
+            <h1>Welcome to Our Animal Database 🐾</h1>
             <h4>Explore our site feauturing our dog and cat photo gallery and a searchable index of animal facts</h2>
             <p>Are you a dog person or a cat person?</p>
             <button class="button">Dog</button>
