--- a/search.html
+++ b/search.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+<body class="body animal-page">
 <body class="body">
     <header class="header">
         <nav class="header__nav layout">
@@ -16,7 +17,7 @@
         </nav>
     </header>
     <main class="main">
-        <h1>Search for your favorite animal here!</h1>
+        <h1>Search for your favorite animal below!</h1>
         <form>
             <input name="search" id="animal-search" type="text" placeholder="Enter Animal Name..." />
             <button type="submit" class="button">Search</button>
@@ -25,5 +26,6 @@
     </main>
     <footer class="footer">&copy 2023 Rogers, Pope</footer>
     <script src="search.js"></script>
+</body>
 </body>
 </html>
