--- a/dogs.html
+++ b/dogs.html
@@ -10,15 +10,9 @@
             max-width: 80%;
             height: auto;
         }
-        button {
-            padding: 5px; 
-            margin-top: 15 px;
-            margin-bottom: 15px;
-        }
     </style>
 </head>
-<body class="body dog-page">
-<body class="body">
+<body class="body__dogs">
     <header class="header">
         <nav class="header__nav layout">
             <a class="header__link" href="index.html">Home</a>
@@ -28,15 +22,16 @@
         </nav>
     </header>
     <main class="main">
-        <h2> Welcome to our Dog Gallery! </h2>
-        <p>Click the button below to browse photos of some furry friends!</p>
-        <button onclick="getRandomDog()">Generate a Random Dog Image</button>
-        <div id="dogContainer">
-            <img id="dogImage" src="" alt="Random Dog Image">
-        </div>
+        <article>
+            <h1 class="article__h1">Welcome to our Dog Gallery!</h1>
+            <p class="article__p">Click the button below to browse photos of some furry friends!</p>
+            <button class="button" onclick="getRandomDog()">Generate a Random Dog Image</button>
+            <div id="dogContainer">
+                <img id="dogImage" src="" alt="Random Dog Image">
+            </div>
+        </article>
     </main>
     <footer class="footer">&copy 2023 Rogers, Pope</footer>
     <script src="dogs.js"></script>
-</body>
 </body>
 </html>
