--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Animal Database</title>
 </head>
-<body class="body">
+<body class="body__index">
     <header class="header">
         <nav class="header__nav layout">
             <a class="header__link" href="index.html">Home</a>
@@ -18,12 +18,11 @@
     </header>
     <main class="main">
         <article>
-            <h1>Welcome to Our Animal Database 🐾</h1>
-            <h4>Explore our site feauturing a dog and cat photo gallery and a searchable index of animal facts</h2>
-            <p>Are you a dog person or a cat person?</p>
-            <button class="button">Dog</button>
-            <button class="button">Cat</button>
-            <button class="button">Neither</button> <!--onclick takes you to animal search page-->
+            <h1 class="article__h1">Welcome to Our Animal Database 🐾</h1>
+            <h2 class="article__h2">Explore our site, featuring a dog and cat photo gallery and a searchable index of animal facts.</h2>
+            <button class="button" onclick = "window.location.href='dogs.html'">Dogs</button>
+            <button class="button" onclick = "window.location.href='cats.html'">Cats</button>
+            <button class="button" onclick = "window.location.href='search.html'">Animal Search</button>
         </article>
     </main>
     <footer class="footer">&copy 2023 Rogers, Pope</footer>
