--- a/search.html
+++ b/search.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body class="body animal-page">
-<body class="body">
+<body class="body__animals">
     <header class="header">
         <nav class="header__nav layout">
             <a class="header__link" href="index.html">Home</a>
@@ -17,15 +16,16 @@
         </nav>
     </header>
     <main class="main">
-        <h1>Search for your favorite animal below!</h1>
-        <form>
-            <input name="search" id="animal-search" type="text" placeholder="Enter Animal Name..." />
-            <button type="submit" class="button">Search</button>
-        </form>
-        <section id="animals"></section>
+        <article>
+            <h1 class="article__h1">Search for your favorite animal below!</h1>
+            <form>
+                <input name="search" id="animal-search" type="text" placeholder="Enter Animal Name..." />
+                <button type="submit" class="button">Search</button>
+            </form>
+            <section id="animals"></section>
+        </article>
     </main>
     <footer class="footer">&copy 2023 Rogers, Pope</footer>
     <script src="search.js"></script>
-</body>
 </body>
 </html>
