--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main class="main">
         <article>
             <h1 class="article__h1">Welcome to Our Animal Database 🐾</h1>
-            <h2 class="article__h2">Explore our site, featuring a dog and cat photo gallery and a searchable index of animal facts.</h2>
+            <h2 class="article__h2">Explore our site, featuring dog and cat photo galleries and a searchable index of animal facts.</h2>
             <button class="button" onclick = "window.location.href='dogs.html'">Dogs</button>
             <button class="button" onclick = "window.location.href='cats.html'">Cats</button>
             <button class="button" onclick = "window.location.href='search.html'">Animal Search</button>
