--- a/search.html
+++ b/search.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Animal Search</title>
 </head>
 <body class="body__animals">
     <header class="header">
@@ -19,7 +19,7 @@
         <article>
             <h1 class="article__h1">Search for your favorite animal below!</h1>
             <form>
-                <input name="search" id="animal-search" type="text" placeholder="Enter Animal Name..." />
+                <input name="search" id="animal-search" type="text" placeholder="Enter Animal Name..."/>
                 <button type="submit" class="button">Search</button>
             </form>
             <section id="animals"></section>
